I added a fix for the inputs that way they stop auto zooming in on mobile, also added the meta data to the home page instead of leaving it on the compenent level

--- a/client/src/pages/signup-login.css
+++ b/client/src/pages/signup-login.css
@@ -80,7 +80,7 @@
   font-size: var(--font-size-700);
   margin-bottom: 0.3rem;
 }
-
+/* animation */
 @keyframes error-animation {
   0% {
     transform: translateY(200px);
@@ -90,5 +90,11 @@
   100% {
     transform: translateY(0);
     opacity: 1;
+  }
+}
+/* mobile input fix */
+@media screen and (max-width: 600px) {
+  .form-input {
+    font-size: var(--font-size-300);
   }
 }
